@startuml MPD_Unitee
!theme plain
skinparam linetype ortho

title MPD - UNITEE Schéma Physique MySQL 8.0

' ============================================================
' TABLES DE RÉFÉRENCE
' ============================================================

entity sources {
  *id_source : INT PK AUTO_INCREMENT
  --
  nom_source : VARCHAR(100) UNIQUE NOT NULL
  description : TEXT
  url_base : VARCHAR(500)
  type_source : ENUM('API','SCRAPING','FLUX_RSS') DEFAULT 'API'
  actif : BOOLEAN DEFAULT TRUE
  date_creation : DATETIME DEFAULT CURRENT_TIMESTAMP
}

entity acheteurs {
  *id_acheteur : INT PK AUTO_INCREMENT
  --
  nom_acheteur : VARCHAR(255) UNIQUE NOT NULL
  type_acheteur : ENUM('COLLECTIVITE','ETAT','ENTREPRISE_PUBLIQUE')
  region : VARCHAR(100)
  contact_email : VARCHAR(255)
  contact_phone : VARCHAR(20)
  date_creation : DATETIME DEFAULT CURRENT_TIMESTAMP
}

entity mots_cles {
  *id_mot_cle : INT PK AUTO_INCREMENT
  --
  mot_cle : VARCHAR(100) UNIQUE NOT NULL
  categorie : ENUM('PRIMARY','SECONDARY','EXTRACTED') DEFAULT 'EXTRACTED'
  pertinence : INT DEFAULT 50
    CHECK (pertinence BETWEEN 0 AND 100)
  date_creation : DATETIME DEFAULT CURRENT_TIMESTAMP
}

' ============================================================
' TABLE MÉTIER PRINCIPALE
' ============================================================

entity annonces {
  *id_annonce : BIGINT PK AUTO_INCREMENT
  #id_source : INT FK NOT NULL
  #id_acheteur : INT FK NOT NULL
  --
  id_externe : VARCHAR(100) NOT NULL
  titre : VARCHAR(500) NOT NULL
    CHECK (CHAR_LENGTH(titre) > 5)
  resume : TEXT
  description : LONGTEXT
  montant_estime : DECIMAL(15,2)
    CHECK (montant_estime >= 0)
  devise : VARCHAR(3) DEFAULT 'EUR'
  date_publication : DATETIME NOT NULL
  date_limite_reponse : DATETIME NOT NULL
    CHECK (date_publication <= date_limite_reponse)
  localisation : VARCHAR(255)
  region : VARCHAR(100)
  lien_source : TEXT
  statut : ENUM('NOUVEAU','QUALIFIE','IGNORE','REPONDU') DEFAULT 'NOUVEAU'
  timestamp_import : DATETIME DEFAULT CURRENT_TIMESTAMP
  timestamp_maj : DATETIME ON UPDATE CURRENT_TIMESTAMP
  -- UNIQUE KEY uk_doublon (id_source, id_externe)
}

' Table de liaison N:N
entity annonce_mot_cle {
  *id_annonce : BIGINT PK FK (CASCADE DELETE)
  *id_mot_cle : INT PK FK (RESTRICT DELETE)
  --
  score_pertinence : INT DEFAULT 50
    CHECK (score_pertinence BETWEEN 0 AND 100)
  type_extraction : ENUM('REGEX','TF-IDF','MANUEL','LLM') DEFAULT 'REGEX'
  date_extraction : DATETIME DEFAULT CURRENT_TIMESTAMP
}

' ============================================================
' TABLES DE QUALIFICATION
' ============================================================

entity scores_pertinence {
  *id_score : INT PK AUTO_INCREMENT
  #id_annonce : BIGINT UNIQUE FK (CASCADE DELETE)
  --
  score_pertinence : INT NOT NULL
    CHECK (score_pertinence BETWEEN 0 AND 100)
  niveau_alerte : ENUM('CRITIQUE','URGENT','NORMAL','IGNORE') DEFAULT 'NORMAL'
  raison_scoring : TEXT
  bonus_keywords : INT DEFAULT 0
  bonus_montant : INT DEFAULT 0
  bonus_deadline : INT DEFAULT 0
  bonus_acheteur : INT DEFAULT 0
  date_calcul : DATETIME DEFAULT CURRENT_TIMESTAMP
  date_maj : DATETIME ON UPDATE CURRENT_TIMESTAMP
}

entity notifications {
  *id_notification : BIGINT PK AUTO_INCREMENT
  #id_annonce : BIGINT FK (CASCADE DELETE)
  --
  type_alerte : VARCHAR(50) NOT NULL
  statut : ENUM('NOUVEAU','ENVOYE','ACQUITTE','ARCHIVE') DEFAULT 'NOUVEAU'
  priorite : INT DEFAULT 3
    CHECK (priorite BETWEEN 1 AND 5)
  message : LONGTEXT
  date_creation : DATETIME DEFAULT CURRENT_TIMESTAMP
  date_envoi : DATETIME
  date_acquittement : DATETIME
}

' ============================================================
' TABLES TECHNIQUES
' ============================================================

entity log_technique {
  *id_log_tech : BIGINT PK AUTO_INCREMENT
  --
  timestamp : DATETIME DEFAULT CURRENT_TIMESTAMP
  type_operation : VARCHAR(100)
  source_operation : VARCHAR(100)
  statut : ENUM('OK','WARNING','ERREUR')
  message : TEXT
  details_json : JSON
  duree_ms : INT
}

entity log_metier {
  *id_log_metier : BIGINT PK AUTO_INCREMENT
  #id_annonce : BIGINT FK (CASCADE DELETE)
  --
  timestamp : DATETIME DEFAULT CURRENT_TIMESTAMP
  type_operation : VARCHAR(100)
  utilisateur : VARCHAR(255)
  description : TEXT
  avant_etat : JSON
  apres_etat : JSON
}

entity historique_annonces {
  *id_historique : BIGINT PK AUTO_INCREMENT
  #id_annonce : BIGINT FK (CASCADE DELETE)
  --
  timestamp : DATETIME DEFAULT CURRENT_TIMESTAMP
  type_modification : VARCHAR(100)
  colonne_modifiee : VARCHAR(100)
  valeur_ancienne : TEXT
  valeur_nouvelle : TEXT
}

entity log_sauvegardes {
  *id_log_sauvegarde : INT PK AUTO_INCREMENT
  --
  timestamp : DATETIME DEFAULT CURRENT_TIMESTAMP
  type_sauvegarde : ENUM('COMPLETE','INCREMENTALE')
  fichier : VARCHAR(500)
  statut : ENUM('OK','ERREUR')
  taille_fichier : BIGINT
  duree_secondes : INT
  message_erreur : TEXT
}

' ============================================================
' RELATIONS
' ============================================================

sources ||--o{ annonces : "id_source (RESTRICT)"
acheteurs ||--o{ annonces : "id_acheteur (RESTRICT)"

annonces ||--o{ annonce_mot_cle : "id_annonce (CASCADE)"
mots_cles ||--o{ annonce_mot_cle : "id_mot_cle (RESTRICT)"

annonces ||--|| scores_pertinence : "id_annonce 1:1 (CASCADE)"
annonces ||--o{ notifications : "id_annonce (CASCADE)"
annonces ||--o{ log_metier : "id_annonce (CASCADE)"
annonces ||--o{ historique_annonces : "id_annonce (CASCADE)"

note bottom
  Moteur : InnoDB | Encodage : utf8mb4_unicode_ci
  RESTRICT = empêche suppression si enfants liés
  CASCADE = propage suppression aux enfants
  ON UPDATE CURRENT_TIMESTAMP = mise à jour auto
end note

@enduml
